--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build:all",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "packages/frontend/dist",
   "installCommand": "npm install",
   "framework": "vite",
