--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "npx prisma generate && npm run build --workspace=@cashflow/frontend",
   "outputDirectory": "packages/frontend/dist",
   "installCommand": "npm install",
   "framework": "vite",
