--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "vercel-build": "tsc -b && vite build",
+    "build": "vite build",
+    "vercel-build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx",
     "clean": "rimraf dist"
