--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npx prisma generate && npm run build --workspace=@cashflow/frontend",
+  "buildCommand": "npx prisma generate && cd packages/frontend && npm install && npx vite build",
   "outputDirectory": "packages/frontend/dist",
   "installCommand": "npm install",
   "framework": "vite",
