--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "buildCommand": "npx prisma generate && cd packages/frontend && npm install && npx vite build",
+  "version": 2,
+  "buildCommand": "cd packages/frontend && npm install --legacy-peer-deps && npm run build",
   "outputDirectory": "packages/frontend/dist",
-  "installCommand": "npm install",
-  "framework": "vite",
+  "installCommand": "npm install --legacy-peer-deps && npx prisma generate",
+  "framework": null,
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" }
   ],
