--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd packages/frontend && npm install --legacy-peer-deps && npm run build",
+  "buildCommand": "ls -la && cd packages/frontend && npm install --legacy-peer-deps && npm run build",
   "outputDirectory": "packages/frontend/dist",
   "installCommand": "npm install --legacy-peer-deps && npx prisma@5.22.0 generate",
   "framework": null,
