--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "./node_modules/.bin/vite build",
+    "build": "npx vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx",
     "clean": "rimraf dist"
